--- a/po/af.po
+++ b/po/af.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-25 14:28+0200\n"
+"POT-Creation-Date: 2010-05-25 14:29+0200\n"
 "PO-Revision-Date: 2010-03-30 23:04+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: afrikaans <af@li.org>\n"
@@ -5132,7 +5132,9 @@ msgid "Do not change the password"
 msgstr "Moenie die wagwoord verander nie"
 
 #: server_privileges.php:804 server_privileges.php:2166
-msgid "No user(s) found."
+#, fuzzy
+#| msgid "No user(s) found."
+msgid "No user found."
 msgstr "Geen gebruiker(s) gevind nie."
 
 #: server_privileges.php:848
