--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -5305,10 +5305,9 @@ msgid "Do not change the password"
 msgstr "Do not change the password"
 
 #: server_privileges.php:804 server_privileges.php:2166
-#, fuzzy
 #| msgid "No user(s) found."
 msgid "No user found."
-msgstr "No user(s) found."
+msgstr "No user found."
 
 #: server_privileges.php:848
 #, php-format
