Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-25 23:31+0200\n"
+"PO-Revision-Date: 2010-05-25 23:43+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5186,10 +5186,9 @@ msgid "Do not change the password"
 msgstr "Ne spreminjaj gesla"
 
 #: server_privileges.php:804 server_privileges.php:2166
-#, fuzzy
 #| msgid "No user(s) found."
 msgid "No user found."
-msgstr "Ni mogoče najti uporabnika(-ov)."
+msgstr "Najden ni bil noben uporabnik."
 
 #: server_privileges.php:848
 #, php-format
