--- a/po/te.po
+++ b/po/te.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-26 14:17+0200\n"
+"PO-Revision-Date: 2010-05-26 14:18+0200\n"
 "Last-Translator:  <veeven@gmail.com>\n"
 "Language-Team: Telugu <te@li.org>\n"
 "Language: te\n"
@@ -189,7 +189,7 @@ msgstr "అవును"
 
 #: db_datadict.php:322 db_printview.php:266 tbl_printview.php:498
 msgid "Print"
-msgstr ""
+msgstr "ముద్రించు"
 
 #: db_export.php:29
 msgid "View dump (schema) of database"
