--- a/po/te.po
+++ b/po/te.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-26 14:18+0200\n"
+"PO-Revision-Date: 2010-05-26 14:20+0200\n"
 "Last-Translator:  <veeven@gmail.com>\n"
 "Language-Team: Telugu <te@li.org>\n"
 "Language: te\n"
@@ -387,7 +387,7 @@ msgstr ""
 #: server_synchronize.php:423 server_synchronize.php:866 tbl_tracking.php:592
 #: test/theme.php:75
 msgid "Table"
-msgstr ""
+msgstr "పట్టిక"
 
 #: db_printview.php:105 libraries/db_structure.lib.php:56
 msgid "Records"
