Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-25 23:43+0200\n"
+"PO-Revision-Date: 2010-05-29 09:35+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4492,8 +4492,8 @@ msgid ""
 "For a list of available transformation options and their MIME type "
 "transformations, click on %stransformation descriptions%s"
 msgstr ""
-"Seznam razpoložljivih možnosti pretvorbe in pretvorbe vrst MIME boste "
-"videli, če kliknete na %sopise transformacij%s"
+"Za seznam razpoložljivih možnosti pretvorbe in vrst MIME kliknite na %sopise "
+"transformacij%s"
 
 #: libraries/tbl_properties.inc.php:145
 msgid "Transformation options"
