--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:02+0200\n"
+"PO-Revision-Date: 2010-05-29 10:06+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2385,7 +2385,7 @@ msgstr ""
 
 #: libraries/engines/innodb.lib.php:144
 msgid "Buffer Pool"
-msgstr ""
+msgstr "Zaloga medpomnilnika"
 
 #: libraries/engines/innodb.lib.php:145 server_status.php:306
 msgid "InnoDB Status"
