--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:06+0200\n"
+"PO-Revision-Date: 2010-05-29 10:07+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2431,7 +2431,7 @@ msgstr ""
 
 #: libraries/engines/innodb.lib.php:250
 msgid "Buffer Pool Activity"
-msgstr ""
+msgstr "Dejavnost zaloge medpomnilnika"
 
 #: libraries/engines/innodb.lib.php:254
 msgid "Read requests"
