--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:07+0200\n"
+"PO-Revision-Date: 2010-05-29 10:09+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2507,7 +2507,7 @@ msgstr ""
 
 #: libraries/engines/myisam.lib.php:42
 msgid "Repair threads"
-msgstr "Popravi niti"
+msgstr "Niti popravljanja"
 
 #: libraries/engines/myisam.lib.php:43
 msgid ""
