Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:09+0200\n"
+"PO-Revision-Date: 2010-05-29 10:11+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2514,6 +2514,8 @@ msgid ""
 "If this value is greater than 1, MyISAM table indexes are created in "
 "parallel (each index in its own thread) during the repair by sorting process."
 msgstr ""
+"Če je vrednost večja od 1, so indeksi tabel MyISAM med popravljanjem zaradi "
+"postopka razvrščanja ustvarjeni vzporedno (vsak indeks v svoji niti)."
 
 #: libraries/engines/myisam.lib.php:47
 msgid "Sort buffer size"
