Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:11+0200\n"
+"PO-Revision-Date: 2010-05-29 10:17+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2538,6 +2538,9 @@ msgid ""
 "This is the amount of memory allocated to the index cache. Default value is "
 "32MB. The memory allocated here is used only for caching index pages."
 msgstr ""
+"Količina pomnilnika uporabljena za predpomnjenje indeksov. Privzeta vrednost "
+"je 32 MB. Tukaj dodeljen pomnilnik se uporablja samo za predpomnjenje "
+"strani indeksov."
 
 #: libraries/engines/pbxt.lib.php:28
 msgid "Record cache size"
