--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:31+0200\n"
+"PO-Revision-Date: 2010-05-29 10:32+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3469,6 +3469,8 @@ msgstr "Število trenutno umazanih strani."
 #: libraries/messages.inc.php:85
 msgid "The number of buffer pool pages that have been requested to be flushed."
 msgstr ""
+"Število strani zaloge medpomnilnika, za katere je bila zaprošena "
+"izplaknitev."
 
 #: libraries/messages.inc.php:86
 msgid "The number of free pages."
