--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:32+0200\n"
+"PO-Revision-Date: 2010-05-29 10:33+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3528,7 +3528,7 @@ msgstr ""
 
 #: libraries/messages.inc.php:95
 msgid "The number writes done to the InnoDB buffer pool."
-msgstr ""
+msgstr "Število zapisov storjenih v zalogi medpomnilnika InnoDB."
 
 #: libraries/messages.inc.php:96
 msgid "The number of fsync() operations so far."
