--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:37+0200\n"
+"PO-Revision-Date: 2010-05-29 10:38+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4217,7 +4217,7 @@ msgstr "Vrata"
 
 #: libraries/replication_gui.lib.php:103
 msgid "Master status"
-msgstr ""
+msgstr "Stanje glavnega strežnika"
 
 #: libraries/replication_gui.lib.php:105
 msgid "Slave status"
