Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:38+0200\n"
+"PO-Revision-Date: 2010-05-29 10:39+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4243,6 +4243,8 @@ msgid ""
 "Only slaves started with the --report-host=host_name option are visible in "
 "this list."
 msgstr ""
+"Samo podrejenci, ki so bili zagnani z možnostjo --report-host=host_name, so "
+"vidni na tem seznamu."
 
 #: libraries/replication_gui.lib.php:240 server_replication.php:194
 msgid "Add slave replication user"
