--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:40+0200\n"
+"PO-Revision-Date: 2010-05-29 10:41+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4431,7 +4431,7 @@ msgstr "KONEC IZREZA"
 
 #: libraries/sqlparser.lib.php:179
 msgid "BEGIN RAW"
-msgstr "BEGIN RAW"
+msgstr "ZAČETEK NAVADNO"
 
 #: libraries/sqlparser.lib.php:183
 msgid "END RAW"
