Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:44+0200\n"
+"PO-Revision-Date: 2010-05-29 10:49+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4967,7 +4967,7 @@ msgstr "Pomoč"
 
 #: pmd_general.php:87
 msgid "Angular links"
-msgstr ""
+msgstr "Oglate povezave"
 
 #: pmd_general.php:87
 msgid "Direct links"
