--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 10:50+0200\n"
+"PO-Revision-Date: 2010-05-29 11:00+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2270,7 +2270,7 @@ msgstr "Relacijski ključ"
 
 #: libraries/display_tbl.lib.php:588
 msgid "Relational display field"
-msgstr ""
+msgstr "Relacijsko prikazno polje"
 
 #: libraries/display_tbl.lib.php:595
 msgid "Show binary contents"
