--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:02+0200\n"
+"PO-Revision-Date: 2010-05-29 11:03+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5411,7 +5411,7 @@ msgstr "ID"
 
 #: server_replication.php:51
 msgid "Unknown error"
-msgstr ""
+msgstr "Neznana napaka"
 
 #: server_replication.php:58
 #, php-format
