--- a/po/sl.po
+++ b/po/sl.po
@@ -5416,7 +5416,7 @@ msgstr "Neznana napaka"
 #: server_replication.php:58
 #, php-format
 msgid "Unable to connect to master %s."
-msgstr ""
+msgstr "Ne morem se povezati z glavnim strežnikom %s."
 
 #: server_replication.php:65
 msgid ""
