--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:06+0200\n"
+"PO-Revision-Date: 2010-05-29 11:07+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5611,7 +5611,7 @@ msgstr "Razvrščanje"
 
 #: server_status.php:261
 msgid "Transaction coordinator"
-msgstr ""
+msgstr "Koordinator transakcij"
 
 #: server_status.php:271
 msgid "Flush (close) all tables"
