Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:12+0200\n"
+"PO-Revision-Date: 2010-05-29 11:22+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5992,6 +5992,8 @@ msgstr "Omogoči pretvarjanje nabora znakov"
 msgid ""
 "If enabled user can enter any MySQL server in login form for cookie auth"
 msgstr ""
+"Če je omogočeno, lahko uporabnik vstopi v kateri koli strežnik MySQL v "
+"prijavnem obrazcu z overovitvijo piškotkov"
 
 #: setup/lib/messages.inc.php:18
 msgid ""
